remove codehaus and gradle dependencies from the fat-jar they will be part of any gradle build anyway and this will avoid version conflicts

--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,11 @@ shadowJar{
 
 task buildRelease(dependsOn: shadowJar) {
   doLast {
+    // remove a few troublesome dependencies from the fat jar
+    exec { commandLine 'zip', '-d', 'build/libs/retrial.jar', 'org/codehaus/groovy/*' }
+    exec { commandLine 'zip', '-d', 'build/libs/retrial.jar', 'org/gradle/*' }
+    exec { commandLine 'zip', '-d', 'build/libs/retrial.jar', 'META-INF/services/org.codehaus.*' }
+    exec { commandLine 'zip', '-d', 'build/libs/retrial.jar', 'META-INF/services/org.gradle.*' }
     print "Release can be found at build/libs/retrial.jar"
   }
 }
